# stock_predictor

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
data/: AAPL_2015-11-11_2025-11-11.csv
docs/: ARCHITECTURE.md
notebooks/: 01_eda.ipynb
src/: __init__.py  backtester.py  data_loader.py  features.py  models.py  visualization.py
